Feature - API endpoint to retrieve monitored object IDs based on metadata filters (#201)
