# swagmodels/meta_filter.go
@@ -1,0 +1,19 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package swagmodels
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+)
+
+// MetaFilter meta filter
+// swagger:model MetaFilter
+type MetaFilter map[string][]string
+
+// Validate validates this meta filter
+func (m MetaFilter) Validate(formats strfmt.Registry) error {
+	return nil
+}
